--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="src/assets/imagens/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plataforma Multiversal</title>
+    <title>Biblioteca Online</title>
   </head>
   <body>
     <div id="app"></div>
